<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/forget_btn_back"
            style="@style/ButtonBack"
            android:padding="5dp"
            android:transitionName="transition_btn_back"/>

        <TextView
            android:id="@+id/forget_title"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="Forget\nPassword"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="56sp"
            android:autoSizeMaxTextSize="64sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoblack"
            android:textColor="@color/bg_primary"
            android:textAllCaps="true"
            android:transitionName="transition_title_txt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_detail"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="@font/robotolight"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_btn_next"
            style="@style/ButtonSecondary"
            android:text="@string/next"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="callMakeSelectionScreen"
            android:transitionName="transition_btn_next"/>
    </LinearLayout>


</ScrollView>