<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register3ndActivity"
    android:background="@color/bg_primary"
    android:padding="30dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/signup_btn_back"
            style="@style/ButtonBack"
            android:transitionName="transition_btn_back"/>

        <TextView
            android:id="@+id/signup_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/robotoblack"
            android:text="Create\nAccount"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:transitionName="transition_title_txt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/codeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"/>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/signup_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/number_phone"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/robotomedium"
                    android:textColor="@color/black"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_btn_signup"
                style="@style/ButtonGeneral"
                android:text="@string/sign_up"
                android:onClick="callLoginScreen"
                android:layout_marginTop="20dp"
                android:transitionName="transition_btn_next"/>

            <Button
                android:id="@+id/signup_btn_login"
                style="@style/ButtonGeneral"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:transitionName="transition_btn_login"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>